[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Gate/Gate.gltf" type="PackedScene" id=1]
[ext_resource path="res://Assets/Gate/Gate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Smoke/Smoke BaseColor.png" type="Texture" id=3]
[ext_resource path="res://Assets/Smoke/Smoke Normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Materials/NoisyMaterials/GrayscaleNoise.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Materials/NoisyMaterials/Shader.tres" type="Shader" id=6]
[ext_resource path="res://Tools/Debug.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 0.466517, 1 ),
"update": 0,
"values": [ Vector3( -50, 0, 0 ), Vector3( 20, 0, 0 ), Vector3( -50, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 0.466517, 1 ),
"update": 0,
"values": [ Vector3( 50, 0, 0 ), Vector3( 30, 0, 0 ), Vector3( 50, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.482968 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.63728 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.63728 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.521569, 0.870588, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.63902 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Door :translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.001, 0.5 ),
"transitions": PoolRealArray( 1, 2.54912, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 3.7, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Particles:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Collect Star"
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -50, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 50, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.219608, 0.705882, 1 ), Color( 0.933333, 0.219608, 0.705882, 1 ), Color( 0.898039, 0.752941, 0.85098, 1 ), Color( 0.933333, 0.219608, 0.705882, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8.0, 16.0, 8.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "collect_star"
} ]
}

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.521569, 0.870588, 1 ), Color( 0.92549, 0.25098, 0.94902, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8.0, 16.0, 8.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Init"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.482968 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.63728 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.63728 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.521569, 0.870588, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.63902 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Door :translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.92549, 0.25098, 0.94902, 1 ), Color( 0.313726, 0.945098, 0.137255, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 2, 2.8, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, -0.366021, 1, -0.435275 ),
"update": 0,
"values": [ 16.0, 8.0, 16.0, 8.0, 8.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Door :translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 3.8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.4, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -50, 0, 0 ), Vector3( -50, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.4, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 50, 0, 0 ), Vector3( 50, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3, 6.3 ),
"transitions": PoolRealArray( 1, 2.54912, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Reject"
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -50, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 50, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.5, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 38.0546, 3.05176e-05 ),
"update": 0,
"values": [ Color( 0.898039, 0.129412, 0.760784, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 0.0156863, 0.0156863, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 8.0, 8.0, 24.0, 8.0 ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Eyeball:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye Lid Top:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -50, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye Lid Bottom:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 50, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyeball:blend_shapes/Pupil Small")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Eyeball:blend_shapes/Pupul Big")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Eyeball:mesh:surface_2/material:emission")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.521569, 0.870588, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Eyeball:mesh:surface_2/material:emission_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 2.63902, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.0, 4.0 ]
}

[sub_resource type="BoxShape" id=9]
extents = Vector3( 2.8004, 2.58232, 1 )

[sub_resource type="CylinderShape" id=10]
radius = 14.3937
height = 12.2177

[sub_resource type="CylinderShape" id=11]
radius = 7.2395
height = 11.5262

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 6 )
shader_param/BaseColor = Color( 0.235294, 0.235294, 0.235294, 1 )
shader_param/NoiseBlend = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
shader_param/Roughness = 0.5
shader_param/NormalDepth = 0.25
shader_param/Rim = 0.01
shader_param/triplanar_scale = Vector3( 0.05, 0.05, 0.05 )
shader_param/triplanar_offset = null
shader_param/triplanar_sharpness = 1.0
shader_param/TextureUniformTriplanar = ExtResource( 5 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )
width = 128

[sub_resource type="Curve" id=15]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 25.4545 ), 0.0, -145.124, 0, 0, Vector2( 0.986333, -10.9091 ), 3.79737, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.363636 ), 0.0, 0.249432, 0, 0, Vector2( 0.995444, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 2
emission_box_extents = Vector3( 1.5, 0.25, 0.5 )
direction = Vector3( 0, -1, 0 )
initial_velocity = 0.5
linear_accel = -3.0
linear_accel_curve = SubResource( 16 )
damping = 7.0
damping_random = 0.25
scale = 2.0
scale_curve = SubResource( 18 )
color_ramp = SubResource( 14 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="SpatialMaterial" id=20]
flags_transparent = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
params_billboard_mode = 3
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false
albedo_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 4 )
proximity_fade_enable = true
proximity_fade_distance = 0.5

[sub_resource type="QuadMesh" id=21]
material = SubResource( 20 )
size = Vector2( 2, 2 )

[node name="Gate" type="Spatial" groups=[
"gates",
]]
script = ExtResource( 2 )

[node name="AnimationManagement" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationManagement"]
root_node = NodePath("../../Gate")
autoplay = "Init"
anims/Blink = SubResource( 1 )
anims/Close = SubResource( 2 )
"anims/Collect Star" = SubResource( 3 )
"anims/Count Stars" = SubResource( 4 )
anims/Init = SubResource( 5 )
anims/Open = SubResource( 6 )
anims/Reject = SubResource( 7 )
anims/Start = SubResource( 8 )

[node name="Through" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Through"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.65181, -4.04618 )
shape = SubResource( 9 )

[node name="Far" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Far"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.0851, 0 )
shape = SubResource( 10 )

[node name="Near" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Near"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.74725, 0 )
shape = SubResource( 11 )

[node name="Gate" parent="." instance=ExtResource( 1 )]

[node name="Gate " parent="Gate" index="0"]
material/0 = SubResource( 12 )

[node name="Eyeball" parent="Gate" index="1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 6.8572, 2.32424 )
"blend_shapes/Pupul Big" = 0.0

[node name="Door " parent="Gate" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0844445, 0 )
material/0 = SubResource( 12 )

[node name="Eye Lid Top" parent="Gate" index="4"]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 6.8572, 2.32424 )

[node name="Eye Lid Bottom" parent="Gate" index="7"]
transform = Transform( 1, 0, 0, 0, 0.642788, -0.766044, 0, 0.766044, 0.642788, 0, 6.8572, 2.32424 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.27958, 1.4411 )
emitting = false
amount = 128
lifetime = 2.0
visibility_aabb = AABB( -4.81706, -4, -4, 9.63413, 8, 8 )
process_material = SubResource( 19 )
draw_pass_1 = SubResource( 21 )

[node name="Debug2" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Debug" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Debug"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Gate_debug_text"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Through" to="." method="_on_CloseTrigger_body_entered"]
[connection signal="body_entered" from="Far" to="." method="_on_Far_body_entered"]
[connection signal="body_exited" from="Far" to="." method="_on_Far_body_exited"]
[connection signal="body_entered" from="Near" to="." method="_on_Near_body_entered"]
[connection signal="body_exited" from="Near" to="." method="_on_Near_body_exited"]

[editable path="Gate"]
